fixed spacing issue on button loading and fixed icon placement issue

--- a/codeTykeReact/src/scss/buttons/_Button.scss
+++ b/codeTykeReact/src/scss/buttons/_Button.scss
@@ -1,4 +1,5 @@
 .submitButton{
+  position: relative;
   text-align: center;
   color: white;
   width: 150px;
@@ -26,6 +27,8 @@
 }
 
 .submitLoader {
+  position: absolute;
+  left: 0;
   height: 40px;
   width: 40px;
   float: left;
